# tap-exact

./: .gitignore  meltano.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot_auto_merge.yaml  test.yml
tap_exact/: auth.py  client.py  schemas.py  streams.py  tap.py
tests/: test_core.py
