[project]
name = "ticketswap-tap-exact"
version = "0.0.1"
description = "`tap-exact` is a Singer tap for Exact, built with the Meltano Singer SDK."
authors = [{ name = "Tobias Cadee", email = "tobias.cadee@ticketswap.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "ELT",
    "Exact",
]
dependencies = [
    "boto3>=1.40.43",
    "fs-s3fs>=1.1.1",
    "lxml>=6.0.2",
    "pendulum>=3.1.0",
    "requests>=2.32.5",
    "singer-sdk>=0.42.1",
    "xmltodict>=1.0.2",
]

[project.scripts]
tap-exact = "tap_exact.tap:TapExact.cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "singer-sdk[testing]~=0.51.0",
]

[tool.hatch.build.targets.sdist]
include = ["tap_exact"]

[tool.hatch.build.targets.wheel]
include = ["tap_exact"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
src = ["tap_exact"]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_exact"]

[tool.ruff.lint.pydocstyle]
convention = "google"
